# Hugoify

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix  todo.md  todos.md
src/: CMakeLists.txt  Makefile  cli.rs  converter.cpp  converter.hpp  external_links.rs  finding.cpp  finding.hpp  latex.rs  lexer.rs  link.cpp  link.hpp  main  main.cpp  main.hpp  main.rs  note.cpp  note.hpp  out  vault.rs
test_vault/test-vault/: anden note.md  en tredje.md  note1.md
test_vault/test-vault/.obsidian/: workspace.json
tests/test-vault/: DeTTe Er en SJOV note (meget).md  anden note.md  en tredje.md  note1.md  nummer 4.md
tests/test-vault/.obsidian/: workspace.json
